Homepage tweaking avoiding overflow issue

--- a/htdocs/assets/css/global.css
+++ b/htdocs/assets/css/global.css
@@ -2840,14 +2840,18 @@ img.media__img {
 ----------------------------------*/
 /* line 6, ../scss/core/modules/_homepage.scss */
 .site-intro {
-  height: 100%;
-  height: 100vh;
+  min-height: 100%;
+  min-height: 100vh;
   background-image: url("../img/bg.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-position: center;
+  padding: 15% 5%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 @media screen and (min-width: 62em) {
   /* line 6, ../scss/core/modules/_homepage.scss */
@@ -2858,15 +2862,26 @@ img.media__img {
     background-size: 100%;
   }
 }
+@media screen and (max-width: 62em) {
+  /* line 6, ../scss/core/modules/_homepage.scss */
+  .site-intro {
+    padding: 30% 5%;
+  }
+}
+@media screen and (max-width: 30em) {
+  /* line 6, ../scss/core/modules/_homepage.scss */
+  .site-intro {
+    padding: 50% 5%;
+  }
+}
 
-/* line 17, ../scss/core/modules/_homepage.scss */
+/* line 25, ../scss/core/modules/_homepage.scss */
 .site-intro__content {
   position: relative;
-  top: 30%;
   text-align: center;
 }
 @media screen and (max-width: 49em) {
-  /* line 17, ../scss/core/modules/_homepage.scss */
+  /* line 25, ../scss/core/modules/_homepage.scss */
   .site-intro__content {
     top: 33.33%;
     width: 80%;
@@ -2874,24 +2889,24 @@ img.media__img {
   }
 }
 
-/* line 28, ../scss/core/modules/_homepage.scss */
+/* line 35, ../scss/core/modules/_homepage.scss */
 .site-intro__logo {
   margin-bottom: 2em;
 }
 @media screen and (min-width: 49em) {
-  /* line 28, ../scss/core/modules/_homepage.scss */
+  /* line 35, ../scss/core/modules/_homepage.scss */
   .site-intro__logo {
     max-width: 55%;
   }
 }
 @media screen and (min-width: 82em) {
-  /* line 28, ../scss/core/modules/_homepage.scss */
+  /* line 35, ../scss/core/modules/_homepage.scss */
   .site-intro__logo {
     max-width: 50%;
   }
 }
 
-/* line 38, ../scss/core/modules/_homepage.scss */
+/* line 45, ../scss/core/modules/_homepage.scss */
 .site-intro__heading {
   font-size: 7em;
   color: white;
@@ -2899,13 +2914,13 @@ img.media__img {
   margin-bottom: 0;
 }
 @media screen and (max-width: 49em) {
-  /* line 38, ../scss/core/modules/_homepage.scss */
+  /* line 45, ../scss/core/modules/_homepage.scss */
   .site-intro__heading {
     font-size: 3em;
   }
 }
 
-/* line 48, ../scss/core/modules/_homepage.scss */
+/* line 55, ../scss/core/modules/_homepage.scss */
 .site-intro__sub-heading {
   font-size: 1.5em;
   font-weight: 500;
@@ -2915,7 +2930,7 @@ img.media__img {
   font-family: "Georgia", serif;
   margin-bottom: 1em;
 }
-/* line 56, ../scss/core/modules/_homepage.scss */
+/* line 63, ../scss/core/modules/_homepage.scss */
 .site-intro__sub-heading:after {
   content: "";
   width: 0;
@@ -2929,27 +2944,32 @@ img.media__img {
   margin-left: -.45em;
 }
 @media screen and (max-width: 49em) {
-  /* line 56, ../scss/core/modules/_homepage.scss */
+  /* line 63, ../scss/core/modules/_homepage.scss */
   .site-intro__sub-heading:after {
-    border-left: .55em solid transparent;
-    border-right: .55em solid transparent;
-    border-top: .55em solid white;
-    margin-left: -.55em;
+    border-left: .35em solid transparent;
+    border-right: .35em solid transparent;
+    border-top: .35em solid white;
+    margin-left: -.35em;
     bottom: -25%;
   }
 }
 @media screen and (max-width: 49em) {
-  /* line 48, ../scss/core/modules/_homepage.scss */
+  /* line 55, ../scss/core/modules/_homepage.scss */
   .site-intro__sub-heading {
     font-size: 1.4em;
   }
 }
 
-/* line 81, ../scss/core/modules/_homepage.scss */
+/* line 88, ../scss/core/modules/_homepage.scss */
 .site-intro__link {
   color: white;
 }
-/* line 83, ../scss/core/modules/_homepage.scss */
+/* line 90, ../scss/core/modules/_homepage.scss */
+.site-intro__link:hover {
+  background-color: white;
+  color: #2c3e50;
+}
+/* line 94, ../scss/core/modules/_homepage.scss */
 .site-intro__link:visited {
   color: white;
 }
