--- a/htdocs/assets/css/ie.css
+++ b/htdocs/assets/css/ie.css
@@ -2518,34 +2518,37 @@ img.media__img {
 ----------------------------------*/
 /* line 6, ../scss/core/modules/_homepage.scss */
 .site-intro {
-  height: 100%;
-  height: 100vh;
+  min-height: 100%;
+  min-height: 100vh;
   background-image: url("../img/bg.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-position: center;
+  padding: 15% 5%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
   background-size: 100%;
 }
 
-/* line 17, ../scss/core/modules/_homepage.scss */
+/* line 25, ../scss/core/modules/_homepage.scss */
 .site-intro__content {
   position: relative;
-  top: 30%;
   text-align: center;
 }
 
-/* line 28, ../scss/core/modules/_homepage.scss */
+/* line 35, ../scss/core/modules/_homepage.scss */
 .site-intro__logo {
   max-width: 55%;
   margin-bottom: 2em;
 }
 
-/* line 38, ../scss/core/modules/_homepage.scss */
+/* line 45, ../scss/core/modules/_homepage.scss */
 .site-intro__heading {
   font-size: 7em;
   color: white;
@@ -2553,7 +2556,7 @@ img.media__img {
   margin-bottom: 0;
 }
 
-/* line 48, ../scss/core/modules/_homepage.scss */
+/* line 55, ../scss/core/modules/_homepage.scss */
 .site-intro__sub-heading {
   font-size: 1.5em;
   font-weight: 500;
@@ -2563,7 +2566,7 @@ img.media__img {
   font-family: "Georgia", serif;
   margin-bottom: 1em;
 }
-/* line 56, ../scss/core/modules/_homepage.scss */
+/* line 63, ../scss/core/modules/_homepage.scss */
 .site-intro__sub-heading:after {
   content: "";
   width: 0;
@@ -2577,11 +2580,16 @@ img.media__img {
   margin-left: -.45em;
 }
 
-/* line 81, ../scss/core/modules/_homepage.scss */
+/* line 88, ../scss/core/modules/_homepage.scss */
 .site-intro__link {
   color: white;
 }
-/* line 83, ../scss/core/modules/_homepage.scss */
+/* line 90, ../scss/core/modules/_homepage.scss */
+.site-intro__link:hover {
+  background-color: white;
+  color: #2c3e50;
+}
+/* line 94, ../scss/core/modules/_homepage.scss */
 .site-intro__link:visited {
   color: white;
 }
