--- a/htdocs/assets/scss/core/modules/_homepage.scss
+++ b/htdocs/assets/scss/core/modules/_homepage.scss
@@ -4,19 +4,26 @@
 ----------------------------------*/
 
 .site-intro {
-	height: 100%;
-	height: 100vh;
+	min-height: 100%;
+	min-height: 100vh;
 	background-image: url("../img/bg.jpg");
 	@include background-size(cover);
 	background-position: center;
+	padding: 15% 5%;
+	@include box-sizing(border-box);
 	@include respond-min($bp3) {
 		@include background-size(100%);
+	}
+	@include respond-max($bp3) {
+		padding: 30% 5%;
+	}
+	@include respond-max($bp1) {
+		padding: 50% 5%;
 	}
 }
 
 .site-intro__content {
 	position: relative;
-	top: 30%;
 	text-align: center;
 	@include respond-max($bp2) {
 		top: 33.33%;
@@ -66,10 +73,10 @@
 		left: 50%;
 		margin-left: -.45em;
 		@include respond-max($bp2) {
-			border-left: .55em solid transparent;
-			border-right: .55em solid transparent;
-			border-top: .55em solid white;
-			margin-left: -.55em;
+			border-left: .35em solid transparent;
+			border-right: .35em solid transparent;
+			border-top: .35em solid white;
+			margin-left: -.35em;
 			bottom: -25%;
 		}
 	}
@@ -80,6 +87,10 @@
 
 .site-intro__link {
 	color: white;
+	&:hover {
+		background-color: white;
+		color: $color-brand-dark;
+	}
 	&:visited {
 		color: white;
 	}
